--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "rimraf dst",
     "build": "npm run clean && tsc",
     "jobs": "npm run build; node dst/jobs.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run build"
   },
   "keywords": [],
   "author": "",
