Update with AWS Lambda config

--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/cron": "^1.7.1",
-    "@types/lodash": "^4.14.149",
-    "@types/moment-timezone": "^0.5.12",
-    "axios": "^0.19.0",
+    "axios": "^1.6.7",
     "cron": "^1.7.2",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.15",
     "moment-timezone": "^0.5.27",
-    "prettier": "^1.19.1",
     "redis": "^3.0.2",
     "rimraf": "^3.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
+    "tslog": "^4.9.2",
+    "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/cron": "^1.7.1",
+    "@types/lodash": "^4.14.149",
+    "@types/moment-timezone": "^0.5.12",
+    "@types/node": "^20.11.16",
+    "prettier": "^1.19.1"
   }
 }
